--- a/digital_events_repository/web/landingPage/header.xhtml
+++ b/digital_events_repository/web/landingPage/header.xhtml
@@ -32,7 +32,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#{request.contextPath}/landingPage/servicios.xhtml">
-                            <i class="material-icons">work</i> #{header.lbl_servicios}
+                            <i class="material-icons">work</i> Servicios
                             <div class="ripple-container"></div>
                         </a>
                     </li>
@@ -61,11 +61,6 @@
                             </h:selectOneMenu>
                         </h:form>
                     </li>
-                    <div id="google_translate_element" style="margin: 5px; "></div><script type="text/javascript">
-                        function googleTranslateElementInit() {
-                            new google.translate.TranslateElement({pageLanguage: 'es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
-                        }
-                    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
                     <li class="dropdown nav-item">
                         <a id="ingreso" href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
                             <i class="material-icons">person</i> Ingresar
