--- a/digital_events_repository/web/landingPage/footer.xhtml
+++ b/digital_events_repository/web/landingPage/footer.xhtml
@@ -38,6 +38,12 @@
                 </script>
                 &copy;
             </div>
+
+            <div id="google_translate_element" style="margin: 5px; "></div><script type="text/javascript">
+                function googleTranslateElementInit() {
+                    new google.translate.TranslateElement({pageLanguage: 'es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
+                }
+            </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
         </div>
     </footer>
 
