--- a/digital_events_repository/web/forgotPassword.xhtml
+++ b/digital_events_repository/web/forgotPassword.xhtml
@@ -27,14 +27,13 @@
                                 <div class=" card-header card-header-image text-center bg-red">
                                     <a href="login.xhtml">
                                         <img src="#{request.contextPath}/resources/img/logoNegro.png" style="height: 130px; width: 310px; padding: 5px;"/>
-                                    </a>   
-                                </div>
+                                    </a>
+                                    <h5 class="card-description text-dark">Ingresa tu correo electronico y en breve te enviaremos tu nueva contrasena...</h5>
+                                </div>                                
                                 <br/>
-
-                                <br/>
-                                <div class="card-body">
+                                <div class="card-body text-center">
                                     <div class="row">
-                                        <div class="col-md-12">
+                                        <div class="col-md-6">
                                             <h:messages showDetail="true" styleClass="alert" style="list-style: none; padding: 0px; display: block" infoClass="alert-success" errorClass="alert-danger" />
                                         </div>
                                     </div>
@@ -45,36 +44,14 @@
                                                     <i class="material-icons">mail</i>
                                                 </span>
                                             </div>
-                                            <h:inputText a:type="email" value="#{sessionController.email}" class="form-control" a:placeholder="#{login.lbl_correo_electronico}" a:required=""/>
-                                        </div>
-                                        <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <span class="input-group-text">
-                                                    <i class="material-icons">lock_outline</i>
-                                                </span>
-                                            </div>
-                                            <h:inputSecret class="form-control" value="#{sessionController.password}" a:placeholder="#{login.lbl_contrasenia}" a:required=""/>
-                                        </div>
-                                        <div class="form-check">
-                                            <label class="form-check-label">
-                                                <input class="form-check-input" type="checkbox"/> 
-                                                #{login.lbl_recordar}
-                                                <span class="form-check-sign">
-                                                    <span class="check"></span>
-                                                </span>
-                                            </label>
-                                            <label class="pull-right">
-                                                <a href="forgotPassword.xhtml">#{login.lbl_olvido_contraseña}</a>
-                                            </label>
-                                        </div>
+                                            <h:inputText a:type="email" value="#{usuarioController.correo}" class="form-control" a:placeholder="#{login.lbl_correo_electronico}" a:required=""/>
+                                        </div>                                       
                                         <div class="footer-row text-center">
-                                            <a  href="#{request.contextPath}/register.xhtml" class="btn btn-info btn-link btn-wd btn-lg-">
-                                                <div class="ripple-container"></div>#{login.lbl_registrar}
-                                            </a>
-                                            <h:commandButton class="btn btn-success btn-link btn-wd btn-lg-" action="#{sessionController.startSession()}" value="#{login.lbl_iniciar_session}">
+                                            <h:commandButton class="btn btn-success btn-flat btn-wd btn-lg-" action="#{usuarioController.updateForgotPassword()}" value="Enviar Correo Electronico">
                                                 <div class="ripple-container"></div>
                                             </h:commandButton>
                                         </div>
+                                        <br/>
                                     </h:form>
                                 </div>
                             </div>
@@ -87,4 +64,3 @@
     </f:view>
 
 </html>
-
