Pueeeeees, hice lo que pude perros... Igual el colpatria va a seguir ahí.

--- a/digital_events_repository/web/SI/errorPages/500.xhtml
+++ b/digital_events_repository/web/SI/errorPages/500.xhtml
@@ -3,10 +3,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Facelet Title</title>
+        <link rel="stylesheet" href="#{request.contextPath}/resources/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="#{request.contextPath}/resources/css/estilo_admi.css"/>
+        <link rel="stylesheet" href="#{request.contextPath}/resources/css/fontawesome-all.css"/>
+        <link rel="stylesheet" href="#{request.contextPath}/resources/css/material-dashboard.css"/>
+        <link rel="stylesheet" href="#{request.contextPath}/resources/css/fontsgoogle.css"/>
+        <link rel="stylesheet" href="#{request.contextPath}/resources/css/font-awesome.min.css"/>
+        <link rel="stylesheet" href="#{request.contextPath}/resources/css/material-kit.css?v=2.0.5"/>    
+        <link rel="stylesheet" href="#{request.contextPath}/resources/demo/demo.css"/>  
+        <link rel="stylesheet" href="#{request.contextPath}/resources/fonts/linearicons/style.css"/>
+        <link rel="stylesheet" href="#{request.contextPath}/resources/fonts/material-design-iconic-font/css/material-design-iconic-font.css"/>
+        <style type="text/css">
+
+        </style>
     </h:head>
     <h:body>
-        500
+        <div class="row">
+            <div class="col" style="padding: 5px 20px 5px 20px;">
+                <img src="#{request.contextPath}/resources/img/Eror 500.png" style="width: 100%; height: 600px"/>
+            </div>
+        </div>
     </h:body>
 </html>
 
