--- a/digital_events_repository/web/landingPage/footer.xhtml
+++ b/digital_events_repository/web/landingPage/footer.xhtml
@@ -39,7 +39,8 @@
                 &copy;
             </div>
 
-            <div id="google_translate_element" style="margin: 5px; "></div><script type="text/javascript">
+            <div id="google_translate_element" style="margin: 5px; "></div>
+            <script type="text/javascript">
                 function googleTranslateElementInit() {
                     new google.translate.TranslateElement({pageLanguage: 'es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
                 }
